axum-debug/tests/fail/not_async.rs
use axum_debug::debug_handler;

#[debug_handler]
fn handler() {}

fn main() {}
