axum-debug/tests/fail/not_async.stderr
error: handlers must be async functions
 --> tests/fail/not_async.rs:4:1
  |
4 | fn handler() {}
  | ^^
